--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- about me main info-->
       <div class="about-me-main-info">
         <h2 class="Front-End-Developer">Project Manager</h2>
-        <h1 class="name-surname">Nikita Boiko</h1>
+        <h1 class="name-surname">Mykyta Boiko</h1>
 
         <p class="description">
           I am very responsive and always ready to help the team.
